--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.1",
-    "react-native-app-auth": "^6.3.0"
+    "react-native-app-auth": "^6.3.0",
+    "react-native-fbsdk-next": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
